--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+	<section class="top">
+		<ul>
+			<li> <a href="#">View Music</a></li>
+			<li> <a href="#">Add Music</a></li>
+			<li> <a href="#">Profile</a></li>
+		</ul>
+	</section>
+	
+	<section class="left">
+		<ul>
+			<li>Song length:</li>
+			<li>Artist:</li>
+			<li>Album:</li>
+			<li>Genre:</li>
+		</ul>
+	</section>
+	
+	<section class="right">
+		<ul>
+			<li>PhonX</li>
+			<li>Debussy</li>	
+			<li>Datsik</li>	
+			<li>Rachmaninoff</li>	
+			<li>Cher</li>	
+		</ul>
+	</section>
+	
 
 </body>
 </html>
+
