about to reformat the whole thing

--- a/index.html
+++ b/index.html
@@ -78,20 +78,8 @@
 		</section>
 		
 		<section id="right">
-			<div id ="songList">
-				<h3>I'm A Legacy</h3>
-				<p>PhonX  |  Rasta  |  DubStep</p>
-				<h3>Prelude to the Afternoon of a Faun</h3>	
-				<p>Debussy  |  Imp Lit  |  Impressionistic</p>
-				<h3>Annihilate</h3>	
-				<p>Datsik  |  Let it Burn  |  DubStep</p>
-				<h3>Symphonic Dances</h3>	
-				<p>Rachmaninoff  |  Classic Lit  |  Classical</p>
-				<h3>Cher</h3>	
-				<p>Cher  |  Believe  |  Dance-Pop</p>
+			<div class="songList" id="container">
 			</div>
-
-
 		</section>
 
 		<section id="addMusicSection" class="hidden">
@@ -124,8 +112,9 @@
 
 	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<script src="songs.js"></script>
-	<script src="listMusic.js"></script>
+	<script src="JavaScript/songs.js"></script>
+	<script src="JavaScript/listMusic.js"></script>
+	<script src="JavaScript/addMusic.js"></script>
 </body>
 </html>
 
